[gd_scene load_steps=4 format=3 uid="uid://b2ooh4xecwrjj"]

[ext_resource type="Script" uid="uid://cea1kneocb2ci" path="res://scenes/main.gd" id="1_0wfyh"]
[ext_resource type="Shader" uid="uid://dvo1ova0hrdq2" path="res://shaders/background/滚动星空.gdshader" id="1_o5qli"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0wfyh"]
shader = ExtResource("1_o5qli")
shader_parameter/bg_color = Color(0.0168, 0.01744, 0.02, 1)

[node name="Main" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0wfyh")

[node name="PopUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HFlowContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Btn滚动星空" type="Button" parent="Control/ScrollContainer/HFlowContainer"]
layout_mode = 2
text = "滚动星空"

[node name="BtnGoto3D" type="Button" parent="Control/ScrollContainer/HFlowContainer"]
layout_mode = 2
text = "Goto 3D"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BG_滚动星空" type="ColorRect" parent="PanelContainer"]
visible = false
material = SubResource("ShaderMaterial_0wfyh")
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Control/ScrollContainer/HFlowContainer/Btn滚动星空" to="." method="_on_l_btn滚动星空_pressed"]
[connection signal="pressed" from="Control/ScrollContainer/HFlowContainer/BtnGoto3D" to="." method="_on_goto3d_button_pressed"]
